Refactor code for improved clarity and consistency