@@ -13,31 +13,21 @@ import kotowari.data.Validatable;
  * @author kawasima
  */
 public class ValidatableFormAdapter extends BeanModel {
-    private TemplateMethodModelEx hasErrors;
-    private TemplateMethodModelEx getErrors;
+    private final TemplateMethodModelEx hasErrors;
+    private final TemplateMethodModelEx getErrors;
 
     public ValidatableFormAdapter(Validatable form, DefaultObjectWrapper ow) {
         super(form, ow);
-        this.hasErrors = arguments -> {
-            switch (arguments.size()) {
-                case 0:
-                    return (Boolean) form.hasErrors();
-                case 1:
-                    return (Boolean) form.hasErrors(arguments.get(0).toString());
-                default:
-                    return null;
-            }
+        this.hasErrors = arguments -> switch (arguments.size()) {
+            case 0 -> (Boolean) form.hasErrors();
+            case 1 -> (Boolean) form.hasErrors(arguments.getFirst().toString());
+            default -> null;
         };
 
-        this.getErrors = arguments -> {
-            switch (arguments.size()) {
-                case 0:
-                    return form.getErrors();
-                case 1:
-                    return form.getErrors(arguments.get(0).toString());
-                default:
-                    return null;
-            }
+        this.getErrors = arguments -> switch (arguments.size()) {
+            case 0 -> form.getErrors();
+            case 1 -> form.getErrors(arguments.getFirst().toString());
+            default -> null;
         };
     }
 
